Sir kindly check Login with google APIs with your clint Id and clint sceret may its works i think only passport.authenticate is not working due to wrong credientials
