# build/swagger.json
@@ -109,6 +109,40 @@
 				}
 			}
 		},
+		"/auth/login/google": {
+			"get": {
+				"operationId": "GoogleLogin",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/auth/login/google/callback": {
+			"get": {
+				"operationId": "GoogleLoginCallback",
+				"responses": {
+					"302": {
+						"description": "Redirect to home page",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": []
+			}
+		},
 		"/users/test": {
 			"get": {
 				"operationId": "TestAPI",
